fix class content-img size bug

--- a/PSD to HTML Projects/PSD to HTML 6/css/style.css
+++ b/PSD to HTML Projects/PSD to HTML 6/css/style.css
@@ -98,7 +98,7 @@ nav {
 .content-img {
     margin-left: 29rem;
     margin-top: -21rem;
-    width: 100%;
+/*     width: 100%; */
 }
 
 .content-img img {
